--- a/Form1.resx
+++ b/Form1.resx
@@ -112,31 +112,30 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SlikServer1.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADQIAAAIB
-        AAAAAQAAAAAmAAAAe0Y3N0E2MDU5LUM4NzYtNDk0NS1CNEVFLTM2MDVFNjNFRTczMH0AAAAA0gEAAAAJ
-        AABPAwAATwMAAAgAOgAAAEcAeQBwAHQAZQBjAGgATQBpAGMAcgBvAG0AZQB0AGUAcgBPAFAAQwBTAGUA
-        cgB2AGUAcgAuADEAAAAIAE4AAAB7AEUAMABCADgAMQBFAEUAOAAtADEAMQBCADYALQA0ADAARQBDAC0A
-        OQAyADcANAAtADMAQgA5ADgANgBDAEUARgA5ADkANQAxAH0AAAAIAE4AAAB7ADkANQBDADcARQBFADAA
-        QQAtADUAOQBCAEYALQA0ADQAOQA4AC0AQgAzADIANwAtAEQANAAyAEQAOAA3ADEARgBFAEYAMwBCAH0A
-        AAAIADwAAABHAHkAcAB0AGUAYwBoACAATQBpAGMAcgBvAG0AZQB0AGUAcgAgAE8AUABDACAAUwBlAHIA
-        dgBlAHIAAAAIADwAAABHAHkAcAB0AGUAYwBoACAATQBpAGMAcgBvAG0AZQB0AGUAcgAgAE8AUABDACAA
-        UwBlAHIAdgBlAHIAAAAIACIAAABTAG8AZgB0AHcAYQByAGUAIABUAG8AbwBsAGIAbwB4AAAAAwBkAAAA
-        AwDoAwAAAgD//wIAAAADAAIAAAAIAAQAAAAuAAAAAwABAAAAAgAAAAIAAAAL
-</value>
-  </data>
-  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>128, 17</value>
   </metadata>
-  <metadata name="pressTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="pressTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="slikServer1.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAuwEAAAIB
+        AAAAAQAAAAAmAAAAe0Y3N0E2MDU5LUM4NzYtNDk0NS1CNEVFLTM2MDVFNjNFRTczMH0AAAAAgAEAAAAJ
+        AABPAwAATwMAAAgAOgAAAEcAeQBwAHQAZQBjAGgATQBpAGMAcgBvAG0AZQB0AGUAcgBPAFAAQwBTAGUA
+        cgB2AGUAcgAuADEAAAAIAE4AAAB7ADUANABDAEEAQgBFAEEAOQAtADcARQA0ADMALQA0AEMARgA3AC0A
+        OABBAEEARgAtADMAMwBBADQAMwBGADQAOQAxAEQAQQAzAH0AAAAIAE4AAAB7ADcANQA2AEIAMABCAEEA
+        OAAtADYARQBCAEQALQA0AEQAOQBEAC0AOQA1ADAAMgAtADMARAA3AEYAOQBEADAANwBBADIAMABBAH0A
+        AAAIADYAAABHAHkAcAB0AGUAYwBoAE0AaQBjAHIAbwBtAGUAdABlAHIATwBQAEMAUwBlAHIAdgBlAHIA
+        AAAIAAIAAAAAAAgAEAAAAEcAeQBwAHQAZQBjAGgAAAADAGQAAAADAOgDAAACAP//AgAAAAMAAgAAAAgA
+        BAAAAC4AAAADAAEAAAACAAAAAgAAAAs=
+</value>
+  </data>
 </root>
